--- a/dudel/templates/_create.html
+++ b/dudel/templates/_create.html
@@ -8,6 +8,7 @@
     <form class="form" method="POST">
         {{ form.hidden_tag() }}
         {{ field_error(form.hidden_tag) }}
+        {{ form.csrf_token }}
 
         <div class="form-group">
             {{ form.title.label }}
