--- a/dudel/templates/poll/settings/choices.html
+++ b/dudel/templates/poll/settings/choices.html
@@ -27,6 +27,7 @@
                                 <td class="choice">
                                     {% if edit_id == choice.id %}
                                         <form class="form form-inline" method="POST">
+                                            {{ edit_form.csrf_token }}
                                             <div class="input-group input-group-sm">
                                                 {{ edit_form.hidden_tag() }}
                                                 {{ form_errors(edit_form) }}
@@ -63,7 +64,7 @@
                             <td>
                                 <form class="form form-inline" method="POST">
                                     {{ form_errors(form) }}
-
+                                    {{ form.csrf_token }}
                                     <div class="input-group input-group-sm">
                                         {{ form.hidden_tag() }}
                                         {{ form.text(class="form-control", placeholder=_("Add a choice")) }}
@@ -136,6 +137,7 @@
             </noscript>
 
             <form method="POST" id="date-time-form" action="{{ url_for('poll_edit_choices', slug=poll.slug, step=step+1) }}" >
+                {{ form.csrf_token }}
                 <div id="date-time-form-content">
                     {{ form.hidden_tag() }}
                     {{ form_errors(form) }}
@@ -213,6 +215,7 @@
             {{ alert("info", _("Here you can select which day/time combinations are available for voting.")) }}
 
             <form class="form form-inline" method="POST" action="{{ url_for('poll_edit_choices', slug=poll.slug, step=4) }}">
+                {{ form.csrf_token }}
                 {{ form.hidden_tag() }}
                 {{ form_errors(form) }}
                 {{ form.dates(hidden=True) }}
