--- a/dudel/templates/poll/settings/edit.html
+++ b/dudel/templates/poll/settings/edit.html
@@ -11,6 +11,7 @@
     {% endif %}
 
     <form method="POST">
+        {{ form.csrf_token }}
         <h3>{{ _("Settings") }}</h3>
         <div class="row">
             <div class="col-md-5">
