--- a/dudel/templates/poll/vote/assign.html
+++ b/dudel/templates/poll/vote/assign.html
@@ -11,6 +11,7 @@
 
     <form method="POST">
     {{ form.hidden_tag() }}
+    {{ form.csrf_token }}
     {{ field_error(form.hidden_tag) }}
 
     <div class="form-group">
