--- a/dudel/templates/user/group.html
+++ b/dudel/templates/user/group.html
@@ -58,6 +58,7 @@
         <form method="POST">
             {{ form.hidden_tag() }}
             {{ field_error(form.hidden_tag) }}
+            {{ form.csrf_token }}
 
             <div class="form-group">
                 {{ form.member.label }}
