--- a/dudel/templates/user/groups.html
+++ b/dudel/templates/user/groups.html
@@ -18,6 +18,7 @@
             {% if config.GROUPS_ENABLED %}
             <h1>{{ _("Create a group") }}</h1>
             <form method="POST">
+                {{ form.csrf_token }}
                 {{ form.hidden_tag() }}
                 {{ field_error(form.hidden_tag) }}
 
