--- a/dudel/templates/user/login.html
+++ b/dudel/templates/user/login.html
@@ -6,6 +6,7 @@
     </div>
 
     <form method="POST" class="form login well">
+        {{ form.csrf_token }}
         {{ form.hidden_tag() }}
         {{ field_error(form.hidden_tag) }}
 
