--- a/dudel/templates/user/register.html
+++ b/dudel/templates/user/register.html
@@ -7,6 +7,7 @@
 
     <form method="POST" class="form form-horizontal">
         {{ form.hidden_tag() }}
+        {{ form.csrf_token }}
         {{ field_error(form.hidden_tag) }}
 
         <div class="form-group">
