--- a/dudel/templates/user/settings.html
+++ b/dudel/templates/user/settings.html
@@ -58,6 +58,7 @@
         <div class="col-md-4">
             <h1>{{ _("Settings") }}</h1>
             <form method="POST">
+                {{ form.csrf_token }}
                 {{ form.hidden_tag() }}
                 {{ field_error(form.hidden_tag) }}
 
